--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -22,232 +22,14 @@
             android:layout_gravity="bottom"/>
     </RelativeLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:id="@+id/frame_container"
+        android:layout_height="wrap_content">
+
+    </FrameLayout>
 
 
-    <ScrollView
-        android:id="@+id/scroll_view"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/footer"
-        android:fillViewport="true">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:gravity="center_horizontal"
-                    android:background="#fff"
-                    android:orientation="vertical"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:padding="10dp"
-                        android:id="@+id/username"
-                        android:textAlignment="center"
-                        android:textColor="#fff"
-                        android:textSize="18sp"
-                        android:background="#66BB6A"
-
-                        android:layout_height="wrap_content" />
-
-                    <ImageView
-                        android:layout_width="150dp"
-                        android:layout_gravity="center_horizontal"
-                        android:scaleType="fitXY"
-                        android:layout_margin="10dp"
-                        android:background="@drawable/man"
-                        android:layout_height="150dp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_weight="3"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:textAlignment="center"
-                        android:layout_marginTop="10dp"
-                        android:id="@+id/editProfile"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="18sp"
-                        android:background="@drawable/border"
-                        android:padding="10dp"
-                        android:text="Edit Profile"
-                        android:layout_height="wrap_content" />
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="10dp"
-                    android:id="@+id/doctrate"
-                    android:background="#fff"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="3"
-                        android:background="#fff"
-                        android:textStyle="bold"
-                        android:layout_marginTop="10dp"
-                        android:padding="20dp"
-                        android:textColor="#333"
-                        android:text="Doctorate / PHD"
-                        android:layout_height="wrap_content" />
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_marginRight="10dp"
-
-                        android:background="@drawable/plus"
-                        android:layout_gravity="center_vertical"
-                        android:layout_height="30dp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="10dp"
-                    android:id="@+id/postgrad"
-                    android:background="#fff"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="3"
-                        android:textStyle="bold"
-                        android:padding="20dp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="#333"
-                        android:text="Post Graduation"
-                        android:layout_height="wrap_content" />
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/plus"
-                        android:layout_gravity="center_vertical"
-                        android:layout_height="30dp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="10dp"
-                    android:id="@+id/graduate"
-                    android:background="#fff"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="3"
-                        android:background="#fff"
-                        android:textStyle="bold"
-                        android:padding="20dp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="#333"
-                        android:text="Graduation"
-                        android:layout_height="wrap_content" />
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/plus"
-                        android:layout_gravity="center_vertical"
-                        android:layout_height="30dp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="10dp"
-                    android:id="@+id/diploma"
-                    android:background="#fff"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="3"
-                        android:background="#fff"
-                        android:padding="20dp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="#333"
-                        android:textStyle="bold"
-                        android:text="Diploma"
-                        android:layout_height="wrap_content" />
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/plus"
-                        android:layout_gravity="center_vertical"
-                        android:layout_height="30dp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:background="#fff"
-                    android:id="@+id/hsc"
-                    android:layout_marginTop="10dp"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="3"
-                        android:background="#fff"
-                        android:textStyle="bold"
-                        android:padding="20dp"
-                        android:textColor="#333"
-                        android:text="HSC"
-                        android:layout_height="wrap_content" />
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/plus"
-                        android:layout_gravity="center_vertical"
-                        android:layout_height="30dp" />
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:background="#fff"
-                    android:id="@+id/ssc"
-                    android:layout_marginTop="10dp"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="3"
-                        android:background="#fff"
-                        android:textStyle="bold"
-                        android:padding="20dp"
-                        android:textColor="#333"
-                        android:text="SSC"
-                        android:layout_height="wrap_content" />
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/plus"
-                        android:layout_gravity="center_vertical"
-                        android:layout_height="30dp" />
-
-                </LinearLayout>
-
-
-
-
-
-
-
-
-
-            </LinearLayout>
-        </ScrollView>
 
 
 
