--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/bg"
-    tools:context=".SplashScreen">
+    tools:context=".Activity.SplashScreen">
     <LinearLayout
         android:layout_width="match_parent"
         android:gravity="center_vertical"
