--- a/app/src/main/res/layout/fragment_post_grad.xml
+++ b/app/src/main/res/layout/fragment_post_grad.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="20dp"
-    tools:context=".Doctrate">
+    android:layout_margin="10dp"
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -37,7 +34,7 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="match_parent"
-                android:text="Diploma"
+                android:text="Post Graduation"
                 android:textColor="#333"
                 android:textSize="20sp"
                 android:layout_height="wrap_content" />
@@ -49,11 +46,16 @@
                 android:layout_marginTop="30dp"
                 android:textSize="16sp"
                 android:layout_height="wrap_content" />
-            <EditText
+            <Spinner
+                android:id="@+id/course"
                 android:layout_width="match_parent"
-                android:textColor="#333"
-                android:textSize="20sp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@drawable/black"
+                android:padding="10dp"
+                android:drawSelectorOnTop="true"
+                android:entries="@array/pg_course_type"
+                />
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -65,6 +67,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:textColor="#333"
+                android:id="@+id/speciliasation"
                 android:textSize="20sp"
                 android:layout_height="wrap_content" />
 
@@ -80,7 +83,26 @@
                 android:layout_width="match_parent"
                 android:textColor="#333"
                 android:textSize="20sp"
+                android:id="@+id/insitiute"
                 android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Course Type"
+                android:textColor="#333"
+                android:layout_marginTop="30dp"
+                android:textSize="16sp"
+                android:layout_height="wrap_content" />
+            <Spinner
+                android:id="@+id/course_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:background="@drawable/black"
+                android:drawSelectorOnTop="true"
+                android:entries="@array/phd_course_type"
+                />
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -93,6 +115,50 @@
                 android:layout_width="match_parent"
                 android:textColor="#333"
                 android:textSize="20sp"
+                android:id="@+id/pssing_out_year"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Total Marks Obtained"
+                android:textColor="#333"
+                android:layout_marginTop="30dp"
+                android:textSize="16sp"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:layout_width="match_parent"
+                android:textColor="#333"
+                android:textSize="20sp"
+                android:id="@+id/totalmarks"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Total Marks Out of"
+                android:textColor="#333"
+                android:layout_marginTop="30dp"
+                android:textSize="16sp"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:layout_width="match_parent"
+                android:textColor="#333"
+                android:textSize="20sp"
+                android:id="@+id/outoffmarks"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Percentage"
+                android:textColor="#333"
+                android:layout_marginTop="30dp"
+
+                android:textSize="16sp"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:layout_width="match_parent"
+                android:textColor="#333"
+                android:textSize="20sp"
+                android:id="@+id/pernentage"
                 android:layout_height="wrap_content" />
 
             <TextView
@@ -106,14 +172,32 @@
                 android:layout_width="match_parent"
                 android:textColor="#333"
                 android:textSize="20sp"
+                android:id="@+id/grades"
                 android:layout_height="wrap_content" />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Upload Mark Sheet"
+                android:textColor="#fff"
+                android:id="@+id/uploaddoc"
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:background="@color/colorPrimary"
+                android:layout_marginTop="30dp"
+                android:textSize="16sp"
+                android:layout_height="wrap_content" />
+
             <Button
                 android:layout_width="match_parent"
                 android:textColor="@color/colorPrimary"
-                android:text="Save"
-                android:background="#fff"
+                android:text="Submit"
+                android:layout_marginTop="30dp"
+                android:id="@+id/submitform"
+                android:background="@drawable/border"
                 android:layout_height="match_parent" />
 
         </LinearLayout>
     </ScrollView>
-</LinearLayout>
+
+</FrameLayout>
