--- a/app/src/main/res/layout/fragment_phd.xml
+++ b/app/src/main/res/layout/fragment_phd.xml
@@ -193,10 +193,15 @@
                 android:layout_width="match_parent"
                 android:textColor="@color/colorPrimary"
                 android:text="Submit"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:id="@+id/submitform"
                 android:background="@drawable/border"
                 android:layout_height="match_parent" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
