New code uploaded

--- a/app/src/main/res/layout/fragment_phd.xml
+++ b/app/src/main/res/layout/fragment_phd.xml
@@ -179,7 +179,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:text="Upload Mark Sheet"
+                android:text="Upload Documents"
                 android:textColor="#fff"
                 android:id="@+id/uploaddoc"
                 android:padding="10dp"
