--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:gravity="center"
         android:background="@color/colorPrimary"
         android:elevation="10dp"
@@ -19,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_marginTop="1dp"
             android:layout_height="wrap_content"
+            android:baselineAligned="false"
             android:layout_gravity="bottom"/>
     </RelativeLayout>
 
