--- a/app/src/main/res/layout/fragment_hsc.xml
+++ b/app/src/main/res/layout/fragment_hsc.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:orientation="vertical"
     tools:context=".Fragment.HscFragment">
-
+    <ProgressBar
+        android:minHeight="20dp"
+        android:maxHeight="20dp"
+        android:id="@+id/progress"
+        android:indeterminateTint="#66BB6A"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
     <ScrollView
         android:layout_width="match_parent"
         android:scrollbars="none"
+        android:layout_margin="10dp"
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
@@ -194,4 +203,4 @@
         </LinearLayout>
     </ScrollView>
 
-</FrameLayout>
+</LinearLayout>
