New code uploaded

--- a/app/src/main/res/layout/fragment_hsc.xml
+++ b/app/src/main/res/layout/fragment_hsc.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Fragment.HscFragment">
+    tools:context=".Fragment.PhdFragment">
     <ProgressBar
         android:minHeight="20dp"
         android:maxHeight="20dp"
         android:id="@+id/progress"
         android:indeterminateTint="#66BB6A"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="match_parent">
+
             <TextView
                 android:layout_width="match_parent"
                 android:text="Add Detail"
@@ -63,7 +64,7 @@
                 android:background="@drawable/black"
                 android:padding="10dp"
                 android:drawSelectorOnTop="true"
-                android:entries="@array/hsc_course_type"
+                android:entries="@array/ssc_course_type"
                 />
 
 
@@ -72,7 +73,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:text="School Mediam "
+                android:text="School Medium"
                 android:textColor="#333"
                 android:layout_marginTop="30dp"
                 android:textSize="16sp"
@@ -81,25 +82,10 @@
                 android:layout_width="match_parent"
                 android:textColor="#333"
                 android:textSize="20sp"
-                android:id="@+id/mediam"
+                android:id="@+id/insitiute"
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:text="Course Type"
-                android:textColor="#333"
-                android:layout_marginTop="30dp"
-                android:textSize="16sp"
-                android:layout_height="wrap_content" />
-            <Spinner
-                android:id="@+id/course_type"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:background="@drawable/black"
-                android:drawSelectorOnTop="true"
-                android:entries="@array/phd_course_type"
-                />
+
 
 
             <TextView
@@ -176,7 +162,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:text="Upload Mark Sheet"
+                android:text="Upload Documents"
                 android:textColor="#fff"
                 android:id="@+id/uploaddoc"
                 android:padding="10dp"
@@ -185,6 +171,28 @@
                 android:layout_marginTop="30dp"
                 android:textSize="16sp"
                 android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:id="@+id/upload_count"
+                    android:visibility="gone"
+                    android:layout_width="0dp"
+                    android:gravity="center_vertical"
+                    android:layout_weight="2"
+                    android:layout_height="wrap_content"
+                    />
+
+
+            </LinearLayout>
+
+
+
+
 
             <Button
                 android:layout_width="match_parent"
@@ -196,7 +204,7 @@
                 android:layout_height="match_parent" />
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="50dp">
 
             </LinearLayout>
 
