--- a/app/src/main/res/layout/fragment_diploma_fragmnet.xml
+++ b/app/src/main/res/layout/fragment_diploma_fragmnet.xml
@@ -4,26 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
-    tools:context=".Fragment.DiplomaFragmnet">
+    tools:context=".Fragment.PhdFragment">
     <ProgressBar
         android:minHeight="20dp"
         android:maxHeight="20dp"
         android:id="@+id/progress"
         android:indeterminateTint="#66BB6A"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_margin="10dp"
         android:scrollbars="none"
+        android:layout_margin="10dp"
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="match_parent">
+
             <TextView
                 android:layout_width="match_parent"
                 android:text="Add Detail"
@@ -109,6 +109,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/black"
                 android:drawSelectorOnTop="true"
                 android:entries="@array/phd_course_type"
@@ -189,7 +190,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:text="Upload Mark Sheet"
+                android:text="Upload Documents"
                 android:textColor="#fff"
                 android:id="@+id/uploaddoc"
                 android:padding="10dp"
@@ -198,6 +199,28 @@
                 android:layout_marginTop="30dp"
                 android:textSize="16sp"
                 android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:id="@+id/upload_count"
+                    android:visibility="gone"
+                    android:layout_width="0dp"
+                    android:gravity="center_vertical"
+                    android:layout_weight="2"
+                    android:layout_height="wrap_content"
+                    />
+
+
+            </LinearLayout>
+
+
+
+
 
             <Button
                 android:layout_width="match_parent"
@@ -209,9 +232,10 @@
                 android:layout_height="match_parent" />
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="50dp">
 
             </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
